--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,52 @@
 ################################################################################
 
 /DS_2/x64/Debug/DS_2.pdb
+/DS_2/*
+/DS_2/DS_2.sln
+/DS_2/DS_2/x64/Debug/maintest.obj.enc
+/DS_2/DS_2/x64/Debug/mainTest.obj
+/DS_2/DS_2/x64/Debug/main24a2.obj
+/DS_2/DS_2/x64/Debug/HashTable.obj
+/DS_2/DS_2/x64/Debug/DS_2.tlog/link.write.1.tlog
+/DS_2/DS_2/x64/Debug/DS_2.tlog/link.read.1.tlog
+/DS_2/DS_2/x64/Debug/DS_2.tlog/link.command.1.tlog
+/DS_2/DS_2/x64/Debug/DS_2.tlog/DS_2.lastbuildstate
+/DS_2/DS_2/x64/Debug/DS_2.tlog/CL.write.1.tlog
+/DS_2/DS_2/x64/Debug/DS_2.tlog/CL.read.1.tlog
+/DS_2/DS_2/x64/Debug/DS_2.tlog/CL.command.1.tlog
+/DS_2/DS_2/x64/Debug/DS_2.log
+/DS_2/DS_2/x64/Debug/DS_2.ilk
+/DS_2/DS_2/x64/Debug/DS_2.exe.recipe
+/DS_2/DS_2/DS_2.vcxproj.user
+/DS_2/DS_2/DS_2.vcxproj.filters
+/DS_2/DS_2/DS_2.vcxproj
+/DS_2/.vs/DS_2/v17/ipch/AutoPCH/fe36d3869a4fc6f2/MAINTEST.ipch
+/DS_2/.vs/DS_2/v17/ipch/AutoPCH/ddabe6d46a3167e3/MAIN24A2.ipch
+/DS_2/.vs/DS_2/v17/ipch/AutoPCH/66872127a93c861b/TESTTREE.ipch
+/DS_2/.vs/DS_2/v17/ipch/AutoPCH/65eda6fdeb035e6/TEAM.ipch
+/DS_2/.vs/DS_2/v17/ipch/AutoPCH/14e5843da1b6e7d6/OLYMPICS24A2.ipch
+/DS_2/.vs/DS_2/v17/Browse.VC.opendb
+/DS_2/.vs/DS_2/v17/Browse.VC.db-wal
+/DS_2/.vs/DS_2/v17/Browse.VC.db-shm
+/DS_2/.vs/DS_2/v17/Browse.VC.db
+/DS_2/.vs/DS_2/v17/.suo
+/DS_2/.vs/DS_2/FileContentIndex/read.lock
+/DS_2/.vs/DS_2/FileContentIndex/9df50b7c-1667-4e32-a4a8-09a72f9ac162.vsidx
+/DS_2/.vs/DS_2/FileContentIndex/75c8c883-5586-4dfd-9de6-11c34b2c962f.vsidx
+/DS_2/.vs/DS_2/FileContentIndex/0d7780e4-f3e9-4da4-a133-1b5bf54f21a6.vsidx
+/DS_2/.vs/DS_2/FileContentIndex/071df2e4-eb3e-4a69-a677-4147e7aa12e2.vsidx
+/.vs/VSWorkspaceState.json
+/.vs/slnx.sqlite
+/.vs/ProjectSettings.json
+/.vs/DS_2/v17/Browse.VC.db
+/.vs/DS_2/v17/.suo
+/.vs/DS_2/FileContentIndex/read.lock
+/.vs/DS_2/FileContentIndex/92ca1842-3b6a-4f4d-8902-74e7b1392769.vsidx
+/testTree.cpp
+/DS_2/x64/Debug/DS_2.exe
+/DS_2/DS_2/x64/Debug/vc143.pdb
+/DS_2/DS_2/x64/Debug/vc143.idb
+/DS_2/DS_2/x64/Debug/testtree.obj.enc
+/DS_2/DS_2/x64/Debug/testTree.obj
+/DS_2/DS_2/x64/Debug/Team.obj
+/DS_2/DS_2/x64/Debug/olympics24a2.obj
